--- a/frontend/src/app/account/register/register.component.html
+++ b/frontend/src/app/account/register/register.component.html
@@ -1,1 +1,37 @@
-<p>register works!</p>
+<form class='p-3'>
+  <h1 class='mt-6 text-2xl font-serif'>Register</h1>
+  <div class='mt-5 flex flex-col gap-0.5'>
+    <label for='email'>Email Address</label>
+    <input id='email' type='email'>
+  </div>
+
+  <div class='mt-5 flex flex-col gap-0.5'>
+    <label for='first-name'>First Name</label>
+    <input id='first-name' type='text'>
+  </div>
+
+  <div class='mt-5 flex flex-col gap-0.5'>
+    <label for='last-name'>Last Name</label>
+    <input id='last-name' type='text'>
+  </div>
+
+  <div class='mt-5 flex flex-col gap-0.5'>
+    <label for='password'>Password</label>
+    <input id='password' type='password'>
+  </div>
+
+  <div class='mt-5 flex flex-col gap-0.5'>
+    <label for='confirm-password'>Confirm Password</label>
+    <input id='confirm-password' type='password'>
+  </div>
+
+  <button type='submit'
+          class='w-full mt-12 py-3 px-3 bg-blue-500 hover:bg-blue-500/90 focus:ring-2 text-white uppercase tracking-wider text-center'>
+    Continue
+  </button>
+
+  <p class='mt-2'>
+    Already have an account?
+    <a routerLink='../login' class='text-blue-500 cursor-pointer  hover:underline'>Sign In</a>
+  </p>
+</form>
