implement authentication and registration ui

--- a/frontend/src/app/account/login/login.component.html
+++ b/frontend/src/app/account/login/login.component.html
@@ -2,13 +2,13 @@
   <h1 class='mt-6 text-2xl font-serif'>Sign In</h1>
   <div class='mt-5 flex flex-col gap-0.5'>
     <label for='username'>Username/EmailAddress</label>
-    <input id='username' type='text'
+    <input id='username' type='text' autocomplete='username'
            formControlName='username'>
   </div>
 
   <div class='mt-5 flex flex-col gap-0.5'>
     <label for='password'>Password</label>
-    <input id='password' type='password'
+    <input id='password' type='password' autocomplete='current-password'
            formControlName='password'>
   </div>
 
